human-intervention-logs/com.beachape:enumeratum-macros_3:1.9.0/gradle-test/gradle-test-2026-05-06T19-22-20-131575Z.log
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE

> Configure project :
GraalVM Reachability Metadata TCK
---------------------------------

> Task :tckTest
====================
Testing library: com.beachape:enumeratum-macros_3:1.9.0
Command: `/home/jovan/Work/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5082-4dac1146/gradlew nativeTest`
Executing test...
-------
Starting a Gradle Daemon, 1 busy and 7 stopped Daemons could not be reused, use --status for details
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE
> Task :compileJava NO-SOURCE
> Task :tck-test-support:compileJava UP-TO-DATE
> Task :tck-test-support:processResources NO-SOURCE
> Task :tck-test-support:classes UP-TO-DATE
> Task :tck-test-support:jar UP-TO-DATE
> Task :compileScala UP-TO-DATE
> Task :processResources NO-SOURCE
> Task :classes UP-TO-DATE

> Task :compileTestJava
/home/jovan/Work/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5082-4dac1146/tests/src/com.beachape/enumeratum-macros_3/1.9.0/src/test/java/com_beachape/enumeratum_macros_3/ValueOfFromExprBridge.java:9: error: cannot find symbol
import enumeratum.ValueEnumMacros$ValueOfFromExpr;
                 ^
  symbol:   class ValueEnumMacros$ValueOfFromExpr
  location: package enumeratum
/home/jovan/Work/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5082-4dac1146/tests/src/com.beachape/enumeratum-macros_3/1.9.0/src/test/java/com_beachape/enumeratum_macros_3/ValueOfFromExprBridge.java:13: error: cannot access Quotes
import scala.quoted.Quotes;
                   ^
  bad class file: /tmp/metadata-forge-gradle/ad9bda0c70726d46/caches/modules-2/files-2.1/org.scala-lang/scala3-library_3/3.3.6/34bb6603c8cbc4ef4b13b4e5a48636f00b3a35b/scala3-library_3-3.3.6.jar(/scala/quoted/Quotes.class)
    undeclared type variable: X
    Please remove or make sure it appears in the correct subdirectory of the classpath.
/home/jovan/Work/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5082-4dac1146/tests/src/com.beachape/enumeratum-macros_3/1.9.0/src/test/java/com_beachape/enumeratum_macros_3/ValueOfFromExprBridge.java:20: error: cannot find symbol
    static <T> Option<ValueOf<T>> unapply(Type<T> type, Expr<ValueOf<T>> expr, Quotes quotes) {
                                                                               ^
  symbol:   class Quotes
  location: class ValueOfFromExprBridge
/home/jovan/Work/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5082-4dac1146/tests/src/com.beachape/enumeratum-macros_3/1.9.0/src/test/java/com_beachape/enumeratum_macros_3/ValueOfFromExprBridge.java:20: error: cannot access AnyKind
    static <T> Option<ValueOf<T>> unapply(Type<T> type, Expr<ValueOf<T>> expr, Quotes quotes) {
                                              ^
  class file for scala.AnyKind not found
/home/jovan/Work/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5082-4dac1146/tests/src/com.beachape/enumeratum-macros_3/1.9.0/src/test/java/com_beachape/enumeratum_macros_3/ValueOfFromExprBridge.java:21: error: cannot find symbol
        return new ValueEnumMacros$ValueOfFromExpr<T>(type).unapply(expr, quotes);
                   ^
  symbol:   class ValueEnumMacros$ValueOfFromExpr
  location: class ValueOfFromExprBridge
5 errors

> Task :compileTestJava FAILED


FAILURE: Build failed with an exception.
[Incubating] Problems report is available at: file:///home/jovan/Work/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5082-4dac1146/tests/src/com.beachape/enumeratum-macros_3/1.9.0/build/reports/problems/problems-report.html

* What went wrong:
Execution failed for task ':compileTestJava'.
> Compilation failed; see the compiler output below.
  /home/jovan/Work/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5082-4dac1146/tests/src/com.beachape/enumeratum-macros_3/1.9.0/src/test/java/com_beachape/enumeratum_macros_3/ValueOfFromExprBridge.java:9: error: cannot find symbol
  import enumeratum.ValueEnumMacros$ValueOfFromExpr;
                   ^
    symbol:   class ValueEnumMacros$ValueOfFromExpr
    location: package enumeratum
  5 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (Powered by Develocity).

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED12 actionable tasks: 1 executed, 11 up-to-date in 14s


> Task :tckTest FAILED

[Incubating] Problems report is available at: file:///home/jovan/Work/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5082-4dac1146/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':tckTest'.
> Test for com.beachape:enumeratum-macros_3:1.9.0 failed with exit code 1.

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to generate a Build Scan (Powered by Develocity).
> Get more help at https://help.gradle.org.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 18s
9 actionable tasks: 1 executed, 8 up-to-date
